Fix overflow Y

--- a/skyview/src/components/SkyView/SkyView.scss
+++ b/skyview/src/components/SkyView/SkyView.scss
@@ -49,7 +49,7 @@
         width: 607px;
         height: 829px;
         margin: 0 auto;
-        padding: 15px;
+        // padding: 15px;
         border-radius: 14px;
         // background-image: linear-gradient(180deg, #C5EE4F 0%, #BAE4AC 100%);
         background-color: #1d1c1c;
